@@ -42,17 +42,23 @@ import net.sumaris.core.vo.filter.PmfmStrategyFilterVO;
 import net.sumaris.core.vo.filter.ReferentialFilterVO;
 import net.sumaris.core.vo.referential.PmfmVO;
 import org.apache.commons.collections4.CollectionUtils;
+import org.hibernate.jpa.QueryHints;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.Caching;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import javax.persistence.EntityGraph;
 import javax.persistence.EntityManager;
+import javax.persistence.Subgraph;
+import javax.persistence.TypedQuery;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 public class PmfmStrategyRepositoryImpl
@@ -75,13 +81,15 @@ public class PmfmStrategyRepositoryImpl
     @Override
     @Cacheable(cacheNames = CacheConfiguration.Names.PMFM_STRATEGIES_BY_FILTER)
     public List<PmfmStrategyVO> findByFilter(PmfmStrategyFilterVO filter, PmfmStrategyFetchOptions fetchOptions) {
-        return findAll(toSpecification(filter),
-                Sort.by(PmfmStrategy.Fields.STRATEGY, PmfmStrategy.Fields.ACQUISITION_LEVEL, PmfmStrategy.Fields.RANK_ORDER)
-            )
-                .stream()
-                .map(entity -> toVO(entity, fetchOptions))
-                //.sorted(Comparator.comparing(ps -> String.format("%s#%s#%s", ps.getStrategyId(), ps.getAcquisitionLevel(), ps.getRankOrder())))
-                .collect(Collectors.toList());
+        Specification<PmfmStrategy> spec = filter != null ? toSpecification(filter, fetchOptions) : null;
+        TypedQuery<PmfmStrategy> query = getQuery(spec, getDomainClass(), Sort.by(PmfmStrategy.Fields.STRATEGY, PmfmStrategy.Fields.ACQUISITION_LEVEL, PmfmStrategy.Fields.RANK_ORDER));
+
+        // Add hints
+        configureQuery(query, fetchOptions);
+
+        try (Stream<PmfmStrategy> stream = streamQuery(query)) {
+            return stream.map(entity -> toVO(entity, fetchOptions)).toList();
+        }
     }
 
     @Override
@@ -295,4 +303,20 @@ public class PmfmStrategyRepositoryImpl
         }
     }
 
+    protected void configureQuery(TypedQuery<PmfmStrategy> query, @Nullable PmfmStrategyFetchOptions fetchOptions) {
+        if (fetchOptions != null && fetchOptions.isWithPmfms()) {
+            // Prepare load graph
+            EntityManager em = getEntityManager();
+            EntityGraph<?> entityGraph = em.getEntityGraph(PmfmStrategy.GRAPH_PMFM);
+
+            Subgraph<Pmfm> pmfmSubGraph = entityGraph.addSubgraph(PmfmStrategy.Fields.PMFM);
+            pmfmSubGraph.addSubgraph(Pmfm.Fields.PARAMETER);
+            pmfmSubGraph.addSubgraph(Pmfm.Fields.MATRIX);
+            pmfmSubGraph.addSubgraph(Pmfm.Fields.FRACTION);
+            pmfmSubGraph.addSubgraph(Pmfm.Fields.METHOD);
+            pmfmSubGraph.addSubgraph(Pmfm.Fields.UNIT);
+
+            query.setHint(QueryHints.HINT_LOADGRAPH, entityGraph);
+        }
+    }
 }
